Added Header, Board and Lanes

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,46 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.rectangle {
+  height: 50px;
+  width: 100%;
+  background-color: #555;
+  position: relative;
+  top: -25px;
+}
+
+.header{
+  color: white;
+  text-align: center;
+}
+
+.lane {
+  height: 75vh;
+  width: 500px;
+  background-color: #DDD;
+  margin-left: 5px;
+  margin-right: 5px;
+  overflow: auto;
+  display: inline-block;
+  position: relative;
+  padding: 10px;
+  white-space: nowrap;
+}
+
+.board{
+  display: flex;
+  width: 90vw;
+  height: 80vh;
+  top: 15%;
+  bottom: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5%;
+  overflow-x: scroll;
+}
+
+.hamburger{
+  padding: 10px;
+  background-color: white;
+}
